--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -1,17 +1,26 @@
-NEXT_PUBLIC_API_HOST=localhost
+NEXT_PUBLIC_API_HOST=77.37.122.13
 NEXT_PUBLIC_API_PROTOCOL=http
-NEXT_PUBLIC_STATS_API_HOST=http://localhost:8080
-NEXT_PUBLIC_NETWORK_NAME=Awesome chain
-NEXT_PUBLIC_NETWORK_SHORT_NAME=Awesome chain
-NEXT_PUBLIC_NETWORK_ID=5
-NEXT_PUBLIC_NETWORK_CURRENCY_NAME=Ether
-NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL=ETH
+NEXT_PUBLIC_STATS_API_HOST=http://77.37.122.13:8080
+NEXT_PUBLIC_NETWORK_NAME=GlobalNetwork
+NEXT_PUBLIC_NETWORK_SHORT_NAME=GlobalNetwork
+NEXT_PUBLIC_NETWORK_ID=1013
+NEXT_PUBLIC_NETWORK_CURRENCY_NAME=GNF
+NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL=GNF
 NEXT_PUBLIC_NETWORK_CURRENCY_DECIMALS=18
 NEXT_PUBLIC_API_BASE_PATH=/
-NEXT_PUBLIC_APP_HOST=localhost
+NEXT_PUBLIC_APP_HOST=77.37.122.13
 NEXT_PUBLIC_APP_PROTOCOL=http
 NEXT_PUBLIC_HOMEPAGE_CHARTS=['daily_txs']
-NEXT_PUBLIC_VISUALIZE_API_HOST=http://localhost:8081
-NEXT_PUBLIC_IS_TESTNET=true
+NEXT_PUBLIC_VISUALIZE_API_HOST=http://77.37.122.13:8081
+NEXT_PUBLIC_IS_TESTNET=false
 NEXT_PUBLIC_API_WEBSOCKET_PROTOCOL=ws
 NEXT_PUBLIC_API_SPEC_URL=https://raw.githubusercontent.com/blockscout/blockscout-api-v2-swagger/main/swagger.yaml
+NEXT_PUBLIC_AD_BANNER_PROVIDER=none
+NEXT_PUBLIC_AD_TEXT_PROVIDER=none
+NEXT_PUBLIC_WEB3_WALLETS=[ 'metamask' ]
+NEXT_PUBLIC_HOMEPAGE_PLATE_BACKGROUND=#09B5A7
+NEXT_PUBLIC_HOMEPAGE_SHOW_AVG_BLOCK_TIME=false
+NEXT_PUBLIC_NAVIGATION_HIDDEN_LINKS=['eth_rpc_api','rpc_api']
+NEXT_PUBLIC_NETWORK_SECONDARY_COIN_SYMBOL=GNF
+NEXT_PUBLIC_NETWORK_TOKEN_STANDARD_NAME=ERC
+NEXT_PUBLIC_NETWORK_LOGO=https://svgshare.com/i/18Vp.svg
