--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -1,7 +1,7 @@
 ETHEREUM_JSONRPC_VARIANT=geth
 ETHEREUM_JSONRPC_HTTP_URL=http://145.223.117.77:9944
 ETHEREUM_JSONRPC_WS_URL=ws://145.223.117.77:9944
-DATABASE_URL=postgresql://blockscout:ceWb1MeLBEeOIfk65gU8EjF8@db:5432/blockscout
+DATABASE_URL=postgresql://blockscout:ceWb1MeLBEeOIfk65gU8EjF8@localhost:5432/blockscout
 
 # DATABASE_EVENT_URL=
 # DATABASE_QUEUE_TARGET
