--- a/docker-compose/services/nginx.yml
+++ b/docker-compose/services/nginx.yml
@@ -8,14 +8,13 @@ services:
       - 'host.docker.internal:host-gateway'
     volumes:
       - "../proxy:/etc/nginx/templates"
-      - "./ssl:/etc/nginx/ssl"
-      - "./certbot/conf:/etc/letsencrypt"
-      - "./certbot/www:/var/www/certbot"
     environment:
       BACK_PROXY_PASS: ${BACK_PROXY_PASS:-http://backend:4000}
-      FRONT_PROXY_PASS: ${FRONT_PROXY_PASS:-http://frontend:3000}
+      FRONT_PROXY_PASS: ${FRONT_PROXY_PASS:-http://77.37.122.13:3000}  # Changed to point to your VPS frontend
     ports:
-      - "80:80"
-      - "443:443"
-      - "8080:8080"
-      - "8081:8081"
+      - target: 80
+        published: 80
+      - target: 8080
+        published: 8080
+      - target: 8081
+        published: 8081
